--- a/en.html
+++ b/en.html
@@ -669,32 +669,19 @@
         </p>
 -->
 
-      <p class="hidden-mobile" style="text-align:left;">
-        <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-            id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">Munich Time [CET] </a></strong>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <span style="float:right;">
-          <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658678453-c133-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-              title="actual time Beijing" target="_blank" rel="nofollow">Beijing Time [CST] </a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        </span>
-      </p>
+<p class="display-mobile" style="text-align:left;">
+  <strong><a href="//24timezones.com/Munich/time" style="text-decoration: none">Munich</a> - <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="12"></span></strong>
+  <span style="float:right;">
+    <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none">Beijing</a> - <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="12"></span></strong>
+  </span>
+</p>
 
-
-      <p class="display-mobile" style="text-align:left;">
-        <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-            id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">Munich</a></strong>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <span style="float:right;">
-          <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Time - Beijing" target="_blank" rel="nofollow">Beijing</a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        </span>
-      </p>
+<p class="hidden-mobile" style="text-align:left;">
+  <strong><a href="//24timezones.com/Munich/time" style="text-decoration: none">Munich Time [CET] </a> - <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="12"></span></strong>
+  <span style="float:right;">
+    <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" >Beijing Time [CST] </a> - <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="12"></span></strong>
+  </span>
+</p>
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -858,35 +845,38 @@
 
       <div class="flex-container">
         <div id="date-display"></div>
-        <div><a href="//24timezones.com/San-Francisco/time" style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705207058-c1224-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="Clock - San Francisco" target="_blank" rel="nofollow">Vancouver</a></div>
+        <div>
+          <a href="//24timezones.com/Vancouver/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">Vancouver</a> - 
+          <span class="digitalTime" timezone="America/Vancouver" locale="en-US" hour-format="24"></span>
+        </div>
+
+        <div>
+          <a href="//24timezones.com/%E7%B4%90%E7%B4%84%E5%B8%82/%E6%97%B6%E9%97%B4"
+            style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">New York</a> - 
+          <span class="digitalTime" timezone="America/New_York" locale="en-US" hour-format="24"></span>
+        </div>
+
+        <div>
+          <a href="//24timezones.com/London/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">London</a> - 
+          <span class="digitalTime" timezone="Europe/London" locale="en-US" hour-format="24"></span>
+        </div>
+
+        <div>
+          <a href="//24timezones.com/Paris/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">Paris</a> - 
+          <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="24"></span>
+        </div>
 
 
-        <div><a href="//24timezones.com/%E7%B4%90%E7%B4%84%E5%B8%82/%E6%97%B6%E9%97%B4"
-            style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705206204-c1179-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6InpoIn0="
-            title="時間 紐約市" target="_blank" rel="nofollow">New York</a></div>
+        <div>
+          <a href="//24timezones.com/Moscow/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">Moscow</a> - 
+          <span class="digitalTime" timezone="Europe/Moscow" locale="en-US" hour-format="24"></span>
+        </div>
 
 
-        <div><a href="//24timezones.com/London/time" style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705206827-c1136-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="time in London" target="_blank" rel="nofollow">London</a></div>
-
-        <div><a href="//24timezones.com/Paris/time" style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705206628-c1195-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="Paris current time" target="_blank" rel="nofollow">Paris</a></div>
-
-
-        <div><a href="//24timezones.com/Moscow/time" style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705207393-c1166-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="current time in Moscow" target="_blank" rel="nofollow">Moscow</a></div>
-
-
-        <div><a href="//24timezones.com/Beijing/time" style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705206677-c133-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="Beijing time now" target="_blank" rel="nofollow">Beijing</a></div>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+        <div>
+          <a href="//24timezones.com/Beijing/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">Beijing</a> - 
+          <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="24"></span>
+        </div>
 
       </div>
 
